GNOME Bugzilla – Bug 695644
deinterlace: going to infinite loop on EOS with method=scalerbob fields=bff
Last modified: 2013-03-17 18:16:57 UTC
In the following pipeline, deinterlace element is going to infinite loop on EOS: gst-launch-1.0 filesrc location=dv1.avi ! avidemux ! dvdemux ! dvdec ! deinterlace method=scalerbob fields=bff ! autovideosink It happens only when method and fields properties are set on deinterlace element.
Created attachment 238606 [details] deinterlace log
Created attachment 238865 [details] [review] fix for infinite loop
Thanks! Is there any chance you could create a patch in git format-patch format? Commit it locally first (make sure your name/e-mail are set up properly), then use git format-patch -1 to create a patch from the last commit. It would also be great if you could explain the bug/patch a bit in the commit message, that will make it easier to review.
Created attachment 238870 [details] [review] fix for infinite loop Fixes problem of infinite loop in gst_deinterlace_reset_history. Last field in the history was never deinterlaced because idx becomes negative.
Great, thanks! commit 288e05c99dc5ba6ca04343429e3cc7b1162f3e83 Author: Kishore Arepalli <kishore.arepalli@gmail.com> Date: Thu Mar 14 14:12:05 2013 +0100 deinterlace: fix infinite loop on EOS with non-default methods or fields Fixes problem of infinite loop in gst_deinterlace_reset_history. Last field in the history was never deinterlaced because idx becomes negative. Happens e.g. with method=scalerbob fields=bottom or method=greedyl fields=top https://bugzilla.gnome.org/show_bug.cgi?id=695644 https://bugzilla.gnome.org/show_bug.cgi?id=693173
Would this affect https://bugzilla.gnome.org/show_bug.cgi?id=617778 at all?